recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:11: error: not found: value drote
	drote(120)
        ^